--- a/app/src/main/res/layout/fragment_game_info.xml
+++ b/app/src/main/res/layout/fragment_game_info.xml
@@ -1,19 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.gameInfo.GameInfoFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
 
-    <view
-        android:id="@+id/view"
-        class="codes.malukimuthusi.healthreportapp.ui.gameInfo.GameInfoFragment$GameView"
+        <variable
+            name="viewModel"
+            type="codes.malukimuthusi.healthreportapp.ui.gameInfo.GameInfoViewModel" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/root_game"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        tools:context=".ui.gameInfo.GameInfoFragment">
+
+
+        <TextView
+            android:id="@+id/covid19Tracker_game"
+            style="@style/TextAppearance.MaterialComponents.Headline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/gloabl_covid_19_tracker"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pi_chart"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/covid19Tracker_game">
+
+        </com.github.mikephil.charting.charts.PieChart>
+
+        <HorizontalScrollView
+            android:id="@+id/chips_game"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pi_chart">
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chip_group_game"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:chipSpacingHorizontal="@dimen/_16dp"
+                app:singleLine="true"
+                app:singleSelection="true">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/global"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/global" />
+
+            </com.google.android.material.chip.ChipGroup>
+        </HorizontalScrollView>
+
+        <codes.malukimuthusi.healthreportapp.SingleStatView
+            android:id="@+id/recovered_game"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:icon="@drawable/ic_baseline_favorite_border_24"
+            app:iconColor="@color/GREEN_A_700"
+            app:layout_constraintEnd_toStartOf="@+id/confirmed_game"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/chips_game"
+            app:statValue="-"
+            app:title="@string/recovered">
+
+
+        </codes.malukimuthusi.healthreportapp.SingleStatView>
+
+        <codes.malukimuthusi.healthreportapp.SingleStatView
+            android:id="@+id/confirmed_game"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:icon="@drawable/ic_info_outline_black_24dp"
+            app:iconColor="@color/YELLOW_A_700"
+            app:layout_constraintBottom_toBottomOf="@+id/recovered_game"
+            app:layout_constraintEnd_toStartOf="@+id/deaths_game"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/recovered_game"
+            app:layout_constraintTop_toTopOf="@+id/recovered_game"
+            app:statValue="-"
+            app:title="@string/confirmed" />
+
+
+        <codes.malukimuthusi.healthreportapp.SingleStatView
+            android:id="@+id/deaths_game"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:icon="@drawable/ic_emoticon_death_24dp"
+            app:iconColor="@color/RED_A_700"
+            app:layout_constraintBottom_toBottomOf="@+id/confirmed_game"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/confirmed_game"
+            app:layout_constraintTop_toTopOf="@+id/confirmed_game"
+            app:statValue="-"
+            app:title="@string/deaths" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
