--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,8 +8,8 @@
 
     <item
         android:id="@+id/navigation_info"
-        android:icon="@drawable/ic_info_outline_black_24dp"
-        android:title="@string/title_info" />
+        android:icon="@drawable/ic_noun_global_764686"
+        android:title="@string/title_global" />
 
     <item
         android:id="@+id/navigation_report"
