--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,7 +14,7 @@
     <fragment
         android:id="@+id/navigation_info"
         android:name="codes.malukimuthusi.healthreportapp.ui.gameInfo.GameInfoFragment"
-        android:label="@string/title_info"
+        android:label="@string/title_global"
         tools:layout="@layout/fragment_game_info" />
 
     <fragment
