--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_info"
         android:icon="@drawable/ic_noun_global_764686"
-        android:title="@string/title_global" />
+        android:title="@string/game" />
 
     <item
         android:id="@+id/navigation_report"
